Bug 316464 - kstars with indilib without cfitsio fails to build
Summary: kstars with indilib without cfitsio fails to build
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Akarsh Simha
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-10 11:54 UTC by stupor_scurvy343
Modified: 2013-03-15 13:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stupor_scurvy343 2013-03-10 11:54:04 UTC
When building kstars with cmake . -DWITH_INDI=ON -DWITH_CFitsio=OFF, build fails:

[  6%] Building CXX object kstars/CMakeFiles/KStarsLib.dir/ekos/capture.o
In file included from /home/michael/dev/kde/kstars/kstars/fitsviewer/fitsview.h:41:0,
                 from /home/michael/dev/kde/kstars/kstars/ekos/capture.cpp:18:
/home/michael/dev/kde/kstars/kstars/fitsviewer/fitshistogram.h:21:32: fatal error: ui_fitshistogramui.h: No such file or directory
compilation terminated.
make[2]: *** [kstars/CMakeFiles/KStarsLib.dir/ekos/capture.o] Error 1
make[1]: *** [kstars/CMakeFiles/KStarsLib.dir/all] Error 2
make: *** [all] Error 2

Reproduced at 139706a72fbb1f48c1e7e517945513e708687fe6 (master) and 7dc768cf5b04f8a702f690f79d3d7bc151ae8767 (KDE/4.10).
Comment 1 Jasem Mutlaq 2013-03-11 20:23:24 UTC
Git commit 9b44830cc1106ac13dcc818e18ab1d584eed7c68 by Jasem Mutlaq.
Committed on 11/03/2013 at 21:22.
Pushed by mutlaqja into branch 'master'.

Fix building issues with cfitsio disabled

M  +3    -1    kstars/CMakeLists.txt
M  +9    -0    kstars/indi/indiccd.cpp
M  +5    -3    kstars/kstarsactions.cpp

http://commits.kde.org/kstars/9b44830cc1106ac13dcc818e18ab1d584eed7c68
Comment 2 stupor_scurvy343 2013-03-12 10:19:27 UTC
It is OK to backport this to KDE/4.10? It seems to apply cleanly with only one minor conflict in kstars/CMakeLists.txt
Comment 3 stupor_scurvy343 2013-03-15 13:55:24 UTC
Git commit d9dfd9a2b3e337cf92a89e944ca14f2cf8a328d7 by Michael Palimaka.
Committed on 15/03/2013 at 14:37.
Pushed by palimaka into branch 'KDE/4.10'.

Fix building issues with cfitsio disabled.
REVIEW: 109477

M  +4    -2    kstars/CMakeLists.txt
M  +9    -0    kstars/indi/indiccd.cpp
M  +5    -3    kstars/kstarsactions.cpp

http://commits.kde.org/kstars/d9dfd9a2b3e337cf92a89e944ca14f2cf8a328d7