Fix building issues with cfitsio disabled

BUG: 316464